# Gest-o-de-Caixas-Supermercado-Projeto

./: CMakeLists.txt  README.md  main.c
db/: config.txt  dados.txt  errorlog.txt  historial_simulacoes.csv
file/frame/: menuPrints.c  printError.c
file/logic/: controlFunctions.c  dataManager.c  errorlogs.c  init.c  queueManager.c  simulationControl.c
header/frame/: menuPrints.h  printError.h
header/logic/: controlFunctions.h  dataManager.h  errorlogs.h  init.h  queueManager.h  simulationControl.h  struct.h
